# dhcprs

./: README.md  compose.yaml  test.sh
.github/workflows/: test.yaml
client/: Cargo.toml  Dockerfile
client/dhcprs/: Cargo.toml
client/dhcprs/src/: lib.rs
client/src/: main.rs
network_setup/: Dockerfile  setup.sh
server/: Dockerfile  README.md  config.yml  go.mod  go.sum  main.go
