[package]
name = "dhcprs_cli"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.75"
dhcproto = { version = "0.9.0", features = ["serde"] }
libc = "0.2.147"
nix = { version = "0.27.1", features = ["net"] }
pnet = "0.34.0"
socket2 = { version = "0.5.3", features = ["all"] }
unix-udp-sock = "0.7.0"
chrono = "0.4.30"
dhcprs = { path = "dhcprs" }
